<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.onthelookout.otl.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.onthelookout.otl.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.onthelookout.otl.ui.upload.UploadFragment"
        android:label= "@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.onthelookout.otl.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_myaccount"
        android:name="com.onthelookout.otl.ui.myaccount.MyAccountFragment"
        android:label="@string/title_myaccount"
        tools:layout="@layout/fragment_myaccount" />


</navigation>