<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Start"
    android:background="@drawable/start_page_background"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp">


        <TextView
            android:id="@+id/OTL_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/otl"
            android:layout_marginTop="85dp"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:fontFamily="@font/bellezaregular"
            />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="10dp"
            android:layout_toRightOf="@id/OTL_name"
            android:src="@drawable/line"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="15dp">
        </ImageView>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="10dp"
            android:layout_toLeftOf="@id/OTL_name"
            android:src="@drawable/line"
            android:layout_marginTop="130dp"
            android:layout_marginRight="20dp">
        </ImageView>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbox"
            android:id="@+id/button_login"
            android:fontFamily="@font/bellezaregular"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:layout_below="@id/OTL_name"
            android:layout_centerHorizontal="true"
            />


        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonbox"
            android:id="@+id/button_register"
            android:text="@string/register"
            android:fontFamily="@font/bellezaregular"
            android:layout_marginTop="10dp"
            android:layout_below="@id/button_login"
            android:layout_centerHorizontal="true"

            />


        <TextView
            android:id="@+id/OTL_Slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otl_slogan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="350dp"
            android:layout_below="@id/button_register"
            android:textColor="@color/primary_accent_color"
            android:textStyle="bold"/>




    </RelativeLayout>




</ScrollView>