<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:background="@color/app_theme_secondary"
    tools:context=".PhoneInput">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_phone_auth"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/phoneauth" />

        <TextView
            android:id="@+id/text_phone_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_number_verification"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primarytextcolor"/>

        <TextView
            android:id="@+id/text_phone_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/OTP_explain"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/primary_accent_color"/>

        <TextView
            android:id="@+id/enter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_mobile_number"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/primarytextcolor" />




        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/backgroundbox"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"

            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/pre_num"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91-"
                android:textColor="@color/primarytextcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>
            
            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:maxLength="10"
                android:hint="98XX-XXX-XXX"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/primarytextcolor"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/get_otp_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:backgroundTint="@color/app_theme_color"
                android:text="@string/get_otp"
                android:textColor="@color/primarytextcolor"
                android:textStyle="bold"/>

            <ProgressBar
                android:id="@+id/progessbar_sending_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>



    </LinearLayout>


</ScrollView>