<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otp_page_background"
    android:scrollbars="none"
    android:overScrollMode="never"
    tools:context=".EnterOTP">


<!-- top section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/otp_auth_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/otpenter" />

        <TextView
            android:id="@+id/otp_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/otp_verification"
            android:fontFamily="@font/bellezaregular"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/primarytextcolor"/>

        <TextView
            android:id="@+id/otp_auth_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/enter_the_otp_sent_to_you"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/primary_accent_color" />

        <TextView
            android:id="@+id/input_mobile_number_shown"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/primarytextcolor"
            android:textSize="15sp"
            android:textStyle="bold" />


        <!--###################################-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">
            
            
            <EditText
                android:id="@+id/inputotp1"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp2"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp3"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp4"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp5"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>

            <EditText
                android:id="@+id/inputotp6"
                android:layout_width="40dp"
                android:layout_height="46dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:hint="@string/x"
                android:maxLength="1"
                android:textColor="@color/primarytextcolor"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="LableFor"/>
        </LinearLayout>


        <!--###################################-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
            android:id="@+id/no_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/didn_t_recieve_any_otp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/primary_accent_color"/>

            <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="0dp"
            android:text="Resend OTP"
            android:textSize="15sp"
            android:textStyle="bold |italic"
            android:textColor="@color/purple_700" />




        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/otp_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/buttonbox"
            android:fontFamily="@font/bellezaregular"
            android:text="@string/otp_verification"
            android:textColor="@color/primarytextcolor"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progessbar_verifying_otp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>



    </LinearLayout>





</ScrollView>